# paisa_app

./: .env.example  .gitignore  CLAUDE.md  Claude.md  README.md  main.py  nodemon.json  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  run_tests.sh  server.js  vitest.config.js
.playwright-cli/: page-2026-03-31T06-12-35-382Z.yml  page-2026-03-31T06-13-07-144Z.yml  page-2026-03-31T06-14-09-504Z.yml  page-2026-03-31T06-14-26-503Z.yml
client/: index.html  package-lock.json  package.json
client/src/: App.js  App.jsx  api.js
controllers/: accountController.js  batchController.js  budgetController.js  tagController.js  transactionController.js  userController.js
dev_docs/: genai_philosophy.md  implementation_log.md
docs/: paisa_backend.md  paisa_frontend.md
e2e/: auth.spec.js
frontend/: index.html  vite.config.js
frontend/src/: AccountsPage.jsx  App.jsx  AuthPage.jsx  ChatPanel.jsx  HomePage.jsx  TransactionsPage.jsx  index.css
models/: Account.js  Batch.js  Expense.js  Income.js  Tag.js  Transaction.js  User.js
resources/: ideas.md  style.md
routes/: account.js  batch.js  budgetRoutes.js  tag.js  transaction.js  user.js
schemas/: accounts.json  transactions.json
scripts/: check_env.sh  mongo
server/: app.js  index.js
server/middleware/: auth.js
server/models/: Account.js  User.js
server/routes/: accounts.js  auth.js  health.js
test-results/: .last-run.json
tests/: README.md  conftest.py
validators/: accountValidators.js  batchValidators.js  tagValidators.js  transactionValidators.js  userValidators.js
(+54 files in other folders)
